added screen_name, got very basic register/login/logout working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <h1><%= link_to "Home", root_path %></h1>
+  <nav>
+    <% if user_signed_in? %>
+      Signed in as <%= current_user.screen_name %>
+      <%= link_to 'logout', destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to 'Sign up', new_user_registration_path %>
+      |
+      <%= link_to 'Sign in', new_user_session_path %>
+    <% end %>
+  </nav>
 
-<%= yield %>
+  <%= yield %>
 
+  <% flash.each do |key, value| %>
+    <div class='flash' id='<%= key %>'>
+      <%= value %>
+    </div>
+  <% end %>
 </body>
 </html>
